--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title><%= some_variable %></title>
 </head>
 <body>
 <script src="./dist/main.bundle.js"></script>
